fixes up the layout on tasks section

--- a/ui/sections/task/inspectors/tasks.reel/tasks.css
+++ b/ui/sections/task/inspectors/tasks.reel/tasks.css
@@ -1,3 +1,11 @@
-.Tasks {
+.TasksInspector {
+    display: flex;
+}
 
+.TasksInspector-filters-dateRange-inputLabel {
+    width: 3rem;
+}
+
+.TasksInspector-filters-dateRange .Date {
+    flex: 1;
 }
