--- a/ui/icons/disk.reel/_disk.css
+++ b/ui/icons/disk.reel/_disk.css
@@ -1,3 +1,8 @@
+@keyframes beacon {
+    0%   {transform: scale(.5); opacity: 1;}
+    100% {transform: scale(2); opacity: 0;}
+}
+
 .DiskIcon {
     position: relative;
     width: 2.5em;
@@ -22,13 +27,9 @@
 
     &:hover:before { border: 1px solid #939E9F; }
 
-    @nest .selected &:before {
-        border: 1px solid #2b9cd8;
-    }
+    @nest .selected &:before { border: 1px solid #2b9cd8; }
 
-    &:active:before {
-        border: 1px solid #2b9cd8;
-    }
+    &:active:before { border: 1px solid #2b9cd8; }
 }
 
 .DiskIcon-mediaSize {
@@ -41,18 +42,55 @@
     text-align: center;
 }
 
+/* states */
+
+.DiskIcon.fail,
+.DiskIcon.warn,
+.DiskIcon.offline {
+    & img { opacity: .5; }
+}
+
+.DiskIcon.fail      { color: #E0003A; }
+.DiskIcon.warn      { color: #D95B1B;}
+.DiskIcon.offline   { color: #2F3233; }
+
+
 /* warning icon */
 
-.DiskIcon-warningIcon {
+.DiskIcon-statusIcon {
     position: absolute;
-    top:    -.35em;
-    right:  -.35em;
-    width:  1em;
-    height: 1em;
-    color: #bb8e00;
+    top:   1em;
+    left:  50%;
+    margin-left: -.75em;
+    width:  1.5em;
+    height: 1.5em;
+    z-index: 1;
 
     & svg {
-        box-shadow: 0 1px 1px rgba(0,0,0,1);
-        border-radius: 50%;
+        position: relative;
+        overflow: visible;
+        filter: drop-shadow(0 2px 2px rgba(0,0,0,.5));
     }
+
+    @nest .DiskIcon.fail & {
+
+        &:after,
+        &:before {
+            content: '';
+            z-index: -1;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            border: 2px solid currentColor;
+            border-radius: 50%;
+            animation: beacon 2s infinite linear;
+        }
+
+        &:before {
+            animation-delay: .5s;
+        }
+    }
+
 }
