--- a/ui/widgets/alerts.reel/alerts.css
+++ b/ui/widgets/alerts.reel/alerts.css
@@ -1,1 +1,1 @@
-.Alerts .Widget{height:16em}.Notifications-icon{height:1.5em;width:1.5em;margin-right:.5em}.Notifications-title{-webkit-box-flex:1;-ms-flex:1;flex:1}.Notifications-clear{color:inherit;padding:.5em 0}.Notifications-clear:hover{color:#c9cfcf}
+.Alerts .Widget{height:16em}.Notifications-icon{color:#2f3233!important}.Notifications-title{-webkit-box-flex:1;-ms-flex:1;flex:1}.Notifications-clear{color:inherit;padding:.5em 0}.Notifications-clear:hover{color:#c9cfcf}
