adds layout, placeholders, and correct class name to table

--- a/ui/sections/wizard/inspectors/share.reel/table-nfs.reel/table-nfs.css
+++ b/ui/sections/wizard/inspectors/share.reel/table-nfs.reel/table-nfs.css
@@ -1,3 +1,4 @@
-.TableNfs {
-
+.TableNfs .Table-cells > div:nth-child(2),
+.TableNfs .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(2) {
+    max-width: 8em;
 }
