--- a/ui/sections/wizard/inspectors/share.reel/table-afp.reel/table-afp.css
+++ b/ui/sections/wizard/inspectors/share.reel/table-afp.reel/table-afp.css
@@ -1,3 +1,4 @@
-.TableAfp {
-
+.TableAfp .Table-cells > div:nth-child(2),
+.TableAfp .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(2) {
+    max-width: 8em;
 }
