--- a/ui/sections/wizard/inspectors/user.reel/table-users.reel/table-users.css
+++ b/ui/sections/wizard/inspectors/user.reel/table-users.reel/table-users.css
@@ -1,3 +1,4 @@
-.TableUsers {
-
+.TableUsers .Table-cells > div:nth-child(3),
+.TableUsers .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(3) {
+    max-width: 12em;
 }
