--- a/ui/sections/wizard/inspectors/wizard.reel/_wizard.css
+++ b/ui/sections/wizard/inspectors/wizard.reel/_wizard.css
@@ -4,34 +4,53 @@
 }
 
 .Wizard {
-    max-width: 50em;
-    padding: 1em;
     display: flex;
     flex: 1;
     flex-direction: column;
 }
 
-.Wizard .Inspector-body { margin: 0; }
+/* inspector edits */
+
+.Wizard .VolumeCreator .Inspector   { margin: 0; }
+.Wizard .Inspector-body             { margin: 0; }
 
 .Wizard-header {
     position: relative;
+    background: #0B1E29;
+    color: #fff;
+
+    & .wrapper {
+        margin: 0 auto;
+        max-width: 50em;
+        display: flex;
+        align-items: baseline;
+        justify-content: space-between;
+
+    }
 }
 
 .Wizard-header-title { font-size: 1.25em; }
 
-.Wizard-counter {
-    position: absolute;
-    right: 0;
-    bottom: .25em;
+.Wizard-content {
+    background: #2f3233;
+
+    & .stepPlaceholder {
+        margin: 0 auto;
+        max-width: 50em;
+    }
 }
 
-/* inspector edits */
-
-.Wizard .VolumeCreator .Inspector {
-    margin: 0;
+.Wizard-footer {
+    flex: 1;
+    background: #16171a;
 }
 
 /* controls */
+
+.Wizard-controls {
+    margin: 0 auto;
+    max-width: 50em;
+}
 
 .Wizard-controls div:last-child {
     flex: 1;
@@ -52,6 +71,7 @@
     align-items: center;
     padding-left:  1.5em !important;
     padding-right: 1em !important;
+
     & svg {
         height: 1em;
         order: 1;
