--- a/ui/controls/labeled-icon.reel/_labeled-icon.css
+++ b/ui/controls/labeled-icon.reel/_labeled-icon.css
@@ -1,19 +1,3 @@
-.LabeledIcon {}
-
-.LabeledIcon-image {
-    /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; */
-}
-
-.LabeledIcon-image > * {
-    /*width:  3.5em;
-    height: 3.5em;*/
-    /* display: flex; */
-    /* justify-content: center; */
-}
-
 .LabeledIcon-image svg,
 .LabeledIcon-image img {
     display: block;
@@ -28,7 +12,7 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    -webkit-user-select: none;
+    user-select: none;
 }
 
 .LabeledIcon-title { text-align: center; }
