minor css clean up

--- a/ui/main-sidebar/main-navigation.reel/_main-navigation.css
+++ b/ui/main-sidebar/main-navigation.reel/_main-navigation.css
@@ -12,9 +12,7 @@
 /* Preferences Icon */
 
 .MainNavigation-preferences {
-/*
- * FIXME: Display when implemented
- */
+    /* FIXME */
     display: none;
     position: relative;
     margin-top: .5em;
