--- a/ui/icons/disk.reel/_disk.css
+++ b/ui/icons/disk.reel/_disk.css
@@ -44,27 +44,29 @@
 
 /* states */
 
-.DiskIcon-img {
-    @nest .DiskIcon.removed & {
-        opacity: .5;
-    }
-}
+.DiskIcon.offline .DiskIcon-img { opacity: .5;}
 
-.DiskIcon-removedStatus {
-    position: relative;
-    z-index: 1;
-    top: 1.5em;
+.DiskIcon-states {
     position: absolute;
-    color: #2F3233;
-
-    & svg {
-        height: 1.5em;
-        width:  1.5em;
-        filter: drop-shadow(0 2px 2px rgba(0,0,0,.5));
-    }
-
-    & .removedStatus-exported { color: #D78F2A; }
+    z-index: 1;
+    bottom: 1.25em;
+    left: 50%;
+    width: 3em;
+    margin-left: -1.5em;
 }
+
+.DiskIcon-state {
+    text-align: center;
+    font-size: .7em;
+    padding: 0 .15em .1em;
+    background: #666;
+    border-radius: .25em;
+    color: #fff;
+    margin-bottom: .15em;
+    box-shadow: 0 2px 2px rgba(0,0,0,.25);
+}
+
+.DiskIcon-state-offline { background-color: #E0003A; }
 
 .DiskIcon-smartStatus {
     position: absolute;
