--- a/ui/inspectors/calendar.reel/task-type-indicator.reel/_task-type-indicator.css
+++ b/ui/inspectors/calendar.reel/task-type-indicator.reel/_task-type-indicator.css
@@ -12,10 +12,10 @@
     margin-right: .25em;
 }
 
-.TaskTypeIndicator.type-rsync                           { color: #D95B1B; }
+.TaskTypeIndicator.type-rsync_copy                      { color: #D95B1B; }
 .TaskTypeIndicator.type-volume_scrub                    { color: #093A51; }
 .TaskTypeIndicator.type-replication_replicate_dataset   { color: #008C84; }
 .TaskTypeIndicator.type-disk_parallel_test              { color: #990F82; }
 .TaskTypeIndicator.type-update_checkfetch               { color: #C4A412; }
-.TaskTypeIndicator.type-snapshot                        { color: #6D2A2A; }
+.TaskTypeIndicator.type-volume_snapshot_dataset         { color: #6D2A2A; }
 
