--- a/ui/controls/list.reel/list-item.reel/_list-item.css
+++ b/ui/controls/list.reel/list-item.reel/_list-item.css
@@ -22,7 +22,7 @@
 
 /* States ---------------------------------- */
 
-.selected .ListItem {
+.ListItem.selected {
     background: #2B9CD8;
     cursor: default;
     color: #fff;
