--- a/ui/sections/network/inspectors/overview.reel/interface-overview-item.reel/_interface-overview-item.css
+++ b/ui/sections/network/inspectors/overview.reel/interface-overview-item.reel/_interface-overview-item.css
@@ -21,25 +21,37 @@
 
 .InterfaceOverviewItem-toggle {
     cursor: pointer;
+
+    &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+    }
+
     & svg {
         height: 1rem;
         width:  1rem;
+        transform: rotate(-90deg);
+        position: relative;
+        top: 2px;
+        left: -2px;
     }
 
     @nest .InterfaceOverviewItem.is-expanded & svg {
-        transform: rotate(180deg);
+        transform: rotate(0);
     }
 }
 
 .InterfaceOverviewItem-name {
-    width: 10em;
-    padding-left: 1.25rem;
+    margin-left: .5em;
 }
 
 .InterfaceOverviewItem-firstAddress {
     flex: 1;
     text-align: right;
-    margin-right: 1em;
 
     @nest .InterfaceOverviewItem.is-expanded & {
         visibility: hidden;
@@ -47,12 +59,8 @@
 }
 
 .InterfaceOverviewItem-status {
-    position: absolute;
     font-size: .5em;
-    top: 50%;
-    transform: translateY(-50%);
-    margin: 0;
-    padding: 0;
+    margin-left: 1em;
 }
 
 .InterfaceOverviewItem-status .TrafficLight-legend { display: none; }
