cleans up volume overview items layout

--- a/ui/sections/storage/inspectors/overview.reel/volume-overview-item.reel/_volume-overview-item.css
+++ b/ui/sections/storage/inspectors/overview.reel/volume-overview-item.reel/_volume-overview-item.css
@@ -62,4 +62,13 @@
     & .TrafficLight-legend { display: none; }
 }
 
-.VolumeOverviewItem-details .Field { margin-bottom: inherit; }
+.VolumeOverviewItem-details {
+
+    & .Field {
+        margin-bottom: inherit;
+        justify-content: space-between;
+    }
+    & .Field-title      { width: auto;}
+    & .Field-control    { width: auto;}
+}
+
