re-export wizard css

--- a/ui/sections/wizard/inspectors/directory-services.reel/directory-services.css
+++ b/ui/sections/wizard/inspectors/directory-services.reel/directory-services.css
@@ -1,4 +1,1 @@
-.DirectoryServices-wizard .FoldableSection,
-.DirectoryServices-wizard .InspectorFooter  {
-    display: none;
-}
+.DirectoryServices-wizard .FoldableSection,.DirectoryServices-wizard .InspectorFooter{display:none}
