--- a/ui/sections/wizard/inspectors/directory-services.reel/table-freeipa.reel/table-freeipa.css
+++ b/ui/sections/wizard/inspectors/directory-services.reel/table-freeipa.reel/table-freeipa.css
@@ -1,4 +1,1 @@
-.TableFreeipa .Table-cells > div:nth-child(1),
-.TableFreeipa .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(1) {
-    max-width: 8em;
-}
+.TableFreeipa .Table-cells>div:nth-child(1),.TableFreeipa .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(1){max-width:8em}
