--- a/ui/sections/wizard/inspectors/mail.reel/mail.css
+++ b/ui/sections/wizard/inspectors/mail.reel/mail.css
@@ -1,4 +1,1 @@
-.Mail-wizard .FoldableSection,
-.Mail-wizard .InspectorFooter  {
-    display: none !important;
-}
+.Mail-wizard .FoldableSection,.Mail-wizard .InspectorFooter{display:none!important}
