--- a/ui/sections/wizard/inspectors/share.reel/table-iscsi.reel/table-iscsi.css
+++ b/ui/sections/wizard/inspectors/share.reel/table-iscsi.reel/table-iscsi.css
@@ -1,4 +1,1 @@
-.TableIscsi .Table-cells > div:nth-child(2),
-.TableIscsi .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(2) {
-    max-width: 12em;
-}
+.TableIscsi .Table-cells>div:nth-child(2),.TableIscsi .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(2){max-width:12em}
