--- a/ui/sections/wizard/inspectors/system.reel/system.css
+++ b/ui/sections/wizard/inspectors/system.reel/system.css
@@ -1,4 +1,1 @@
-.System-wizard .AdvancedSection,
-.System-wizard .InspectorFooter  {
-    display: none !important;
-}
+.System-wizard .AdvancedSection,.System-wizard .InspectorFooter{display:none!important}
