--- a/ui/sections/wizard/inspectors/directory-services.reel/table-active-directory.reel/table-active-directory.css
+++ b/ui/sections/wizard/inspectors/directory-services.reel/table-active-directory.reel/table-active-directory.css
@@ -1,8 +1,1 @@
-.TableActiveDirectory {
-
-}
-
-.TableActiveDirectory .Table-cells > div:nth-child(1),
-.TableActiveDirectory .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(1) {
-    max-width: 8em;
-}
+.TableActiveDirectory .Table-cells>div:nth-child(1),.TableActiveDirectory .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(1){max-width:8em}
