--- a/ui/sections/wizard/inspectors/share.reel/share.css
+++ b/ui/sections/wizard/inspectors/share.reel/share.css
@@ -1,5 +1,1 @@
-.Share-wizard .FoldableSection,
-.Share-wizard .InspectorFooter,
-.Share-wizard .FoldableSection {
-    display: none !important;
-}
+.Share-wizard .FoldableSection,.Share-wizard .InspectorFooter{display:none!important}
