--- a/ui/sections/wizard/inspectors/share.reel/table-nfs.reel/table-nfs.css
+++ b/ui/sections/wizard/inspectors/share.reel/table-nfs.reel/table-nfs.css
@@ -1,4 +1,1 @@
-.TableNfs .Table-cells > div:nth-child(2),
-.TableNfs .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(2) {
-    max-width: 8em;
-}
+.TableNfs .Table-cells>div:nth-child(2),.TableNfs .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(2){max-width:8em}
