--- a/ui/sections/wizard/inspectors/volume.reel/volume.css
+++ b/ui/sections/wizard/inspectors/volume.reel/volume.css
@@ -1,6 +1,1 @@
-.Volume-volumeCreator .Topology,
-.Volume-volumeCreator .InspectorFooter,
-.Volume-volumeCreator .FieldCheckbox,
-.Volume-volumeCreator .VolumeCreator-sidebar {
-    display: none !important;
-}
+.Volume-volumeCreator .FieldCheckbox,.Volume-volumeCreator .InspectorFooter,.Volume-volumeCreator .Topology,.Volume-volumeCreator .VolumeCreator-sidebar{display:none!important}
