cleans up notification details layout when no job ID provided

--- a/ui/dashboard/notifications.reel/notification-details.reel/_notification-details.css
+++ b/ui/dashboard/notifications.reel/notification-details.reel/_notification-details.css
@@ -13,17 +13,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: .5rem .5rem;
 }
 
 .Notification-details-title {
     display: block;
     color: #939E9F;
     font-weight: bold;
+
+    &:not(:empty) { margin: .5rem; }
 }
 
 .Notification-details header button { align-self: center; }
 
-.Notification-details-errorMessage {
-    word-break: break-word;
-}
+.Notification-details-errorMessage { word-break: break-word; }
