--- a/ui/dashboard/notifications.reel/notification.reel/_notification.css
+++ b/ui/dashboard/notifications.reel/notification.reel/_notification.css
@@ -1,13 +1,13 @@
 .Notification {
     position: relative;
     border-bottom:  2px solid rgba(255,255,255,.05);
-    background: rgba(0,0,0,.1);
+    background-color: rgba(0,0,0,.1);
 }
 
-.Notification:nth-child(even)   { background: rgba(0,0,0,.2); }
 
 .Notification-header {
     display: flex;
+    position: relative;
     flex-wrap: wrap;
     font-size: .85em;
     letter-spacing: .5px;
@@ -15,7 +15,19 @@
     padding: .5em;
     padding-left: calc(.5em + 3px);
     padding-right: .25em;
-    transition: color .25s ease-in-out;
+    transition: color            .25s ease-in-out,
+                background-color .25s ease-in-out;
+
+    &:hover {
+        background-color: rgba(255,255,255,.1);
+        cursor: pointer;
+        color: #fff;
+    }
+
+    @nest .Notification.is-expanded & {
+        background-color: var(--blue);
+        color: #fff;
+    }
 }
 
 .Notification-overview {
@@ -45,7 +57,6 @@
 /* Action Buttons */
 
 .Notification-actions {
-    position: relative;
     display: flex;
     align-self: flex-start;
 }
@@ -70,6 +81,11 @@
 .Notification-expand {
     margin-top: -.25em;
     transition: color .25s ease-in-out;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .Notification-expand svg { transform: rotate(90deg); }
@@ -78,7 +94,7 @@
 .Notification.is-expanded .Notification-expand svg { transform: rotate(270deg);  }
 
 /* Close Button */
-
+.Notification-close { position: relative; z-index: 1;}
 .Notification-close #i-close-bg { fill: transparent; }
 
 .Notification-close:hover #i-close-bg      { fill: #E0003A; stroke: #E0003A;}
