--- a/ui/sections/storage/inspectors/disk.reel/disk.css
+++ b/ui/sections/storage/inspectors/disk.reel/disk.css
@@ -1,1 +1,1 @@
-.Disk{min-width:22em}.Disk .Inspector-optionalButtons button{display:block;margin-right:16px}.Disk .Inspector-optionalButtons button.hide{display:none}
+.Disk{min-width:22em}.Disk .Inspector-optionalButtons button{display:block;margin-right:16px}.Disk .Inspector-optionalButtons button.hide{display:none}.Disk .is-exported .FieldText-text{color:#d95b1b}.Disk .has-failed .FieldText-text{color:#e0003a}
