--- a/ui/sections/accounts/inspectors/kerberos-keytab.reel/kerberos-keytab.css
+++ b/ui/sections/accounts/inspectors/kerberos-keytab.reel/kerberos-keytab.css
@@ -1,1 +1,1 @@
-.KerberosKeytab-entries .Table-row>div:nth-child(1),.KerberosKeytab-entries .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(1){max-width:4.5em}
+.KerberosKeytab-entries .Table-row>div:first-child,.KerberosKeytab-entries .TableHeaderLayout-row .TableHeaderLayout-cell:first-child{max-width:4.5em}
