--- a/ui/sections/storage/inspectors/available-disks.reel/disks-category.reel/_disks-category.css
+++ b/ui/sections/storage/inspectors/available-disks.reel/disks-category.reel/_disks-category.css
@@ -21,22 +21,26 @@
     text-align: left;
     height: 2rem;
     line-height: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     background: #242628;
     cursor: pointer;
+
+    & .Button-content {
+        display: flex;
+        align-items: center;
+    }
 
     &:hover {
         background-color: color(#2A2E33 l(15%));
     }
 
     & svg {
-        order: 1;
-        margin-right: -2px;
+        height: 1rem;
+        width:  1rem;
+        transform: rotate(-90deg);
+        margin-right: .5em;
 
         @nest .AvailableDisksCategory.is-expanded & {
-            transform: rotate(180deg);
+            transform: rotate(0);
         }
     }
 }
