wizard should be able to scroll
adds scrollview to wizard content

--- a/ui/sections/wizard/inspectors/wizard.reel/_wizard.css
+++ b/ui/sections/wizard/inspectors/wizard.reel/_wizard.css
@@ -32,11 +32,17 @@
 .Wizard-header-title { font-size: 1.25em; }
 
 .Wizard-content {
+    display: flex;
+    flex-direction: column;
     background: #2f3233;
 
     & .stepPlaceholder {
         margin: 0 auto;
         max-width: 50em;
+    }
+
+    & .Scrollview-transform {
+        display: block;
     }
 }
 
