fixes css cascade error on widget settings buttons

--- a/ui/dashboard/widgets/widget.reel/_widget.css
+++ b/ui/dashboard/widgets/widget.reel/_widget.css
@@ -130,8 +130,8 @@
     & .Widget-header { width: 100%; }
 
     & .Widget-footer {
-        /* spaces buttons out */
-        & * {
+
+        & .Button {
             margin-left: .5em;
         }
     }
