--- a/ui/sections/wizard/inspectors/directory-services.reel/table-nis.reel/table-nis.css
+++ b/ui/sections/wizard/inspectors/directory-services.reel/table-nis.reel/table-nis.css
@@ -1,1 +1,1 @@
-.TableNis .Table-cells>div:nth-child(1),.TableNis .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(1){max-width:12em}
+.TableNis .Table-cells>div:first-child,.TableNis .TableHeaderLayout-row .TableHeaderLayout-cell:first-child{max-width:12em}
