Set new ui for volume wizard. Ticket: #19849

--- a/ui/sections/wizard/inspectors/volume.reel/_volume.css
+++ b/ui/sections/wizard/inspectors/volume.reel/_volume.css
@@ -1,4 +1,7 @@
-.Volume-volumeCreator .Topology,
+.Volume-volumeCreator .Topology .Topology-spare,
+.Volume-volumeCreator .Topology .Topology-cache,
+.Volume-volumeCreator .Topology .Topology-log,
+.Volume-volumeCreator .Topologizer-graph,
 .Volume-volumeCreator .InspectorFooter,
 .Volume-volumeCreator .FieldCheckbox,
 .Volume-volumeCreator .VolumeCreator-sidebar {
