--- a/ui/sections/wizard/inspectors/volume.reel/volume.css
+++ b/ui/sections/wizard/inspectors/volume.reel/volume.css
@@ -1,1 +1,2 @@
-.Volume-volumeCreator .FieldCheckbox,.Volume-volumeCreator .InspectorFooter,.Volume-volumeCreator .Topology,.Volume-volumeCreator .VolumeCreator-sidebar{display:none!important}
+.Volume-volumeCreator .FieldCheckbox,.Volume-volumeCreator .InspectorFooter,.Volume-volumeCreator .Topology .Topology-spare,.Volume-volumeCreator .Topology .Topology-cache,
+.Volume-volumeCreator .Topology .Topology-log,.Volume-volumeCreator .Topologizer-graph,.Volume-volumeCreator .VolumeCreator-sidebar{display:none!important}
