--- a/ui/main.reel/_main.css
+++ b/ui/main.reel/_main.css
@@ -1,17 +1,20 @@
 .Main {
     flex: 1;
     display: flex;
+    min-height: 0;
 }
 
 .Main > main {
     flex: 1;
     display: flex;
     flex-direction: column;
+    min-height: 0;
 }
 
 .Main-wrapper {
     flex: 1;
     display: flex;
+    min-height: 0;
 }
 
 .Main-content {
