section-settings should scroll in FF

--- a/ui/controls/section.reel/section-settings.reel/_section-settings.css
+++ b/ui/controls/section.reel/section-settings.reel/_section-settings.css
@@ -4,13 +4,11 @@
 
 .SectionSettings,
 .SectionSettings-content {
-    display: flex;
-    flex-direction: column;
     flex: 1;
+    @apply --flex-column;
 }
 
 .SectionSettings-content > * {
-    display: flex;
-    flex-direction: column;
     flex: 1;
+    @apply --flex-column;
 }
