section-root entries should scroll

--- a/ui/controls/section-root.reel/_section-root.css
+++ b/ui/controls/section-root.reel/_section-root.css
@@ -4,8 +4,7 @@
 }
 
 .SectionRoot-entries {
-    display: flex;
-    flex-direction: column;
+    @apply --flex-column;
 }
 
 .SectionRoot-overview {
