edits task styles to not leave trailing border when automatically hidden

--- a/ui/dashboard/notifications.reel/notification.reel/_notification.css
+++ b/ui/dashboard/notifications.reel/notification.reel/_notification.css
@@ -1,7 +1,10 @@
 .Notification {
     position: relative;
-    border-bottom:  2px solid rgba(255,255,255,.05);
     background-color: rgba(0,0,0,.1);
+
+    & .Notification-placeholder > div:first-child {
+        border-bottom:  2px solid rgba(255,255,255,.05);
+    }
 }
 
 
