--- a/ui/sections/storage/inspectors/volume-creator.reel/_volume-creator.css
+++ b/ui/sections/storage/inspectors/volume-creator.reel/_volume-creator.css
@@ -11,7 +11,7 @@
 
 /* maxes out scrollbar */
 .VolumeCreator > .Inspector .Scrollview .Scrollview-transform {
-    max-height: 100%;
+    /* max-height: 100%; */
 }
 
 .VolumeCreator .Inspector-body {
