--- a/ui/inspectors/calendar.reel/_calendar.css
+++ b/ui/inspectors/calendar.reel/_calendar.css
@@ -6,16 +6,14 @@
 
 .Calendar-wrapper {
     flex: 1;
-    display: flex;
-    flex-direction: column;
+    @apply --flex-column;
     padding: 1em;
     padding-bottom: 0;
 }
 
 .Calendar-events {
     flex: 1;
-    display: flex;
-    flex-direction: column;
+    @apply --flex-column;
 }
 
 .Calendar-events-header {
@@ -32,7 +30,7 @@
 .Calendar-eventsList {
     flex: 1;
     position: relative;
-    min-height: 10em;
+    min-height: 0;
 }
 
 /*
