--- a/ui/controls/inspector-section-title.reel/_inspector-section-title.css
+++ b/ui/controls/inspector-section-title.reel/_inspector-section-title.css
@@ -21,11 +21,13 @@
 .InspectorSectionTitle-title {
     position: relative;
     font-weight: 400;
-    /* margin-bottom: .2rem; */
 }
 
 .InspectorSectionTitle-subtitle {
     position: relative;
     font-weight: 200;
     color: #B1BCBE;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
