cleans up Cron-job

--- a/ui/inspectors/cron-job.reel/_cron-job.css
+++ b/ui/inspectors/cron-job.reel/_cron-job.css
@@ -1,6 +1,10 @@
 .CronJob {
-    min-width: 22em !important;
+    width: 22em !important;
     background-color: #2F3233;
+}
+
+.CronJob .ScrollviewContent {
+    min-width: 0;
 }
 
 .CronJob-months {
@@ -8,14 +12,6 @@
     & .MultipleSelectGrid-option {
         min-width: 16.6% !important;
     }
-}
-
-.CronJob-days {
-    & .MultipleSelectGrid-option {}
-}
-
-.CronJob-hours {
-    & .MultipleSelectGrid-option {}
 }
 
 .CronJob .FoldableSection { margin-bottom: 0; }
