removes spell check on virtual machine readme

--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine-readme.reel/_virtual-machine-readme.css
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine-readme.reel/_virtual-machine-readme.css
@@ -3,7 +3,7 @@
     min-width: 20em !Important;
 
     & textarea {
-        min-height: 20em;
+        flex: 1;
         max-height: 100%;
     }
 }
