--- a/ui/sections/wizard/inspectors/wizard.reel/_wizard.css
+++ b/ui/sections/wizard/inspectors/wizard.reel/_wizard.css
@@ -4,9 +4,8 @@
 }
 
 .Wizard {
-    display: flex;
     flex: 1;
-    flex-direction: column;
+    @apply --flex-column;
 }
 
 /* inspector edits */
@@ -32,8 +31,7 @@
 .Wizard-header-title { font-size: 1.25em; }
 
 .Wizard-content {
-    display: flex;
-    flex-direction: column;
+    @apply --flex-column;
     background: #2f3233;
 
     & .stepPlaceholder {
