adds mixin to replace css

--- a/ui/dashboard/widgets/widget.reel/_widget.css
+++ b/ui/dashboard/widgets/widget.reel/_widget.css
@@ -93,10 +93,7 @@
 
 .Widget-flipper {
     flex: 1;
-    display: flex;
-    flex-direction: column;
-    min-height: 0;
-    /* @apply --flex-column; */
+    @apply --flex-column;
 }
 
 .Widget-front,
