fixes styling regression on disk categories

--- a/ui/sections/storage/inspectors/available-disks.reel/disks-category.reel/_disks-category.css
+++ b/ui/sections/storage/inspectors/available-disks.reel/disks-category.reel/_disks-category.css
@@ -27,6 +27,7 @@
     & .Button-content {
         display: flex;
         align-items: center;
+        justify-content: flex-start;
     }
 
     &:hover {
